# competitive-programming

./: 1500191.py  1500201.py  1500631.py  1500706.py  1501294.py  1501377.py  1501433.py  1501450.py  1501593.py  1501741.py  1502289.py  1504254.java  1504766.java  1504930.java  1504942.java  1504949.java  1504958.java  1505140.java  1505142.java  1505894.java  1505903.java  1506621.java  1506626.java  1506632.java  1506637.java  1506639.java  1506640.java  1506644.py  1506679.java  1507416.java  1508247.java  1508482.py  1508638.java  1509050.java  1509274.java  1509601.java  1509646.java  1509741.java  1511042.java  1511174.java  (+931 more)
CCC/: CMakeLists.txt  s1.cpp  s5.cpp  template.cpp
Codeforces/: CMakeLists.txt  other.cpp  test.cpp
DMOJ/: CMakeLists.txt  boxen.cpp  fibo.cpp  fibov2.cpp  leleiandcontest.cpp  poklon-bit.cpp  segmin.cpp  spawnmoreoverlords.cpp  stones.cpp  stuckinarut.cpp  test.cpp  treeplanting.cpp  tunnels.cpp  victorbank.cpp
DMOJ/ccc/: s1.cpp  s2.cpp  s5.cpp
DMOJ/feb13/: gymtour.cpp  kolone.cpp  lsps.cpp  sourcandy.cpp  tourism.cpp
DMOJ/feb7/: noYouproblem.cpp  perica.cpp  sourcandy.cpp  telephone.cpp  tincan.cpp  zapina.cpp
DMOJ/jan24/: bsttest.cpp  crowdedcities.cpp  cubeworld.cpp  flowers.cpp  pbdsdemo.cpp  tintedglasswindow.cpp  wowow.cpp
DMOJ/jan30/: juststalling.cpp  notimetopaint.cpp  rectanglecounting.cpp  spacedout.cpp
Olympiads CC-4 Redemption Arc/: template.cpp  test.cpp  test2.cpp
apr03/: balancedtrees.cpp  catinatree-sol.cpp  catinatree.cpp  nutrienttree.cpp  savenagato.cpp  subtree.cpp  subwayroutes.cpp
apr10/: samecolourleaves.cpp  treeappraisal.cpp  treepruning  treepruning.cpp  werewolf  werewolf.cpp
apr17/: balanced-cycles  balanced-cycles.cpp  centroid-recap.txt  grader.cpp  iteration  iteration.cpp  mag.cpp  race  race-stdio  race-stdio.cpp  race.cpp
ccc/: s3.cpp
ccc-22/: good-groups  good-groups.cpp  good-influencers  good-influencers.cpp  good-influencers.txt  good-samples  good-samples.cpp  good-triplets  good-triplets.cpp
dec05/: deda.cpp  gooddebugging.cpp  lazyfox.cpp  tabovi.cpp
dec12/: farmingsimulator.cpp  redoks.cpp
dmopc/: p1  p1.cpp  p2  p2.cpp  p3.cpp
edu/: seg1.cpp  seg3.cpp
feb13/: christmastreebuilding.cpp  tourism.cpp
feb20/: gradientdescent.cpp  revengeofthebins.cpp  touchingsegments.cpp
feb27/: intervals.cpp  tourism copy.cpp  tourism.cpp
hoare-logic/: algorithms.tex  bfs  bfs.cpp  bsearch  bsearch.cpp  catinatree  catinatree.cpp  dfs.txt  test.py
jan09/: multisetexample.cpp  sales.cpp  talentshow.cpp
jan16/: mhocskianlanguages.cpp  rainfallstorage.cpp
jan30/: maximumstrategicsavings.cpp  picture.cpp
mar06/: foodchain.cpp  stonegame.cpp  strictevaluation.cpp  treatyofwellacotia.cpp
mar13/: magnets.cpp  manhattan-magnets.cpp  marshmallowmolecules.cpp  oof.cpp  test.cpp  (+1 more)
(+81 files in other folders)
