cmake_minimum_required(VERSION 3.17)
project(DMOJ)

set(CMAKE_CXX_STANDARD 14)
add_executable(stuckinarut stuckinarut.cpp)
add_executable(test test.cpp)
add_executable(segmin segmin.cpp)
add_executable(boxen boxen.cpp)
add_executable(spawnmoreoverlords spawnmoreoverlords.cpp)
add_executable(basic "Winter Hw/basic.cpp")
add_executable(leleiandcontest leleiandcontest.cpp)
add_executable(triangleds jan17/triangleds.cpp)
add_executable(stones stones.cpp)
add_executable(treeplanting treeplanting.cpp)
add_executable(fibo fibo.cpp)
add_executable(fibov2 fibov2.cpp)

add_executable(victoralgorithm jan17/victoralgorithm.cpp)
add_executable(essaygenerator jan17/essaygenerator.cpp)
add_executable(segments jan17/segments.cpp)
add_executable(fatalwhale jan17/fatalwhale.cpp)
add_executable(poklon-bit poklon-bit.cpp)
add_executable(crowdedcities jan24/crowdedcities.cpp)
add_executable(tunnels tunnels.cpp)
add_executable(flowers jan24/flowers.cpp)
add_executable(wowow jan24/wowow.cpp)
add_executable(bsttest jan24/bsttest.cpp)

add_executable(pbdsdemo jan24/pbdsdemo.cpp)
add_executable(poplava jan24/poplava.cpp)
add_executable(lasergrid jan24/lasergrid.cpp)
add_executable(cubeworld jan24/cubeworld.cpp)
add_executable(tintedglasswindow jan24/tintedglasswindow.cpp)
add_executable(boxlings jan24/boxlings.cpp)
add_executable(greedyforpies jan24/greedyforpies.cpp)
add_executable(schooltraversal jan24/schooltraversal.cpp)
add_executable(uddered jan30/uddered.cpp)
add_executable(juststalling jan30/juststalling.cpp)
add_executable(notimetopaint jan30/notimetopaint.cpp)
add_executable(spacedout jan30/spacedout.cpp)
add_executable(rectanglecounting jan30/rectanglecounting.cpp)
add_executable(picture jan30/picture.cpp)
add_executable(tincan feb7/tincan.cpp)
add_executable(perica feb7/perica.cpp)
add_executable(zapina feb7/zapina.cpp)
add_executable(telephone feb7/telephone.cpp)
add_executable(mathhw feb7/mathhw.cpp)
add_executable(noYouproblem feb7/noYouproblem.cpp)
add_executable(sourcandy feb13/sourcandy.cpp)
add_executable(majority feb7/majority.cpp)
add_executable(flipperredux feb13/flipperredux.cpp)
add_executable(kolone feb13/kolone.cpp)
add_executable(colourfulstrings feb13/colourfulstrings.cpp)
add_executable(lsps feb13/lsps.cpp)
add_executable(lisbit lisbit.cpp)

add_executable(tourism feb13/tourism.cpp)
add_executable(tracksinthesnow feb13/tracksinthesnow.cpp)
add_executable(balancedtrees feb13/balancedtrees.cpp)
add_executable(worldlineconvergence feb13/worldlineconvergence.cpp)
add_executable(gymtour feb13/gymtour.cpp)
add_executable(s1 ccc/s1.cpp)
add_executable(s2 ccc/s2.cpp)
add_executable(s3 ccc/s3.cpp)
add_executable(s4 ccc/s4.cpp)
add_executable(s5 ccc/s5.cpp)